--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,16 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "./custom_typings",
     ],
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "*": ["./custom_typings/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
